--- a/src/styles/_structural.scss
+++ b/src/styles/_structural.scss
@@ -135,7 +135,6 @@
 
 .email-block {
     position: relative;
-    overflow: hidden;
 
     &:hover .email-block {
         &__exit-icon{
